# skynet-qr-bot

./: .gitignore  LICENSE  README.md  app.py  config.py  docker-compose.yaml  pyproject.toml
.github/workflows/: build-and-deploy-qr.yaml  build-and-deploy.yaml  terraform.yaml
bot/: Dockerfile  bot.py
bot/database/: init_db.py
bot/database/models/: __init__.py  db_requests.py  db_table_actions.py  db_table_users.py
bot/dialog_widgets/: widget_i18n.py
bot/filters/: filters.py
bot/handlers/: owner.py  user.py
bot/locales/en/LC_MESSAGES/: txt.ftl
bot/locales/ru/LC_MESSAGES/: txt.ftl
bot/middlewares/: i18n.py  middleware_config.py
bot/services/: service_qr_generate.py
infra/terraform/: backend.tf  main.tf  main.tf.bak  variables.tf
service-qr/: Dockerfile  app.py  pyproject.toml
