[tool.poetry]
name = "skynet-qr-bot"
version = "0.0.1"
description = ""
authors = ["Erwin VanHoof"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
environs = "^14.2.0"
sqlalchemy = "^2.0.27"
psycopg_binary = "^3.2.9"
greenlet = "^3.0.3"
fluentogram = "^1.2.1"
redis = "^6.4.0"
psycopg = "^3.2.9"
aiogram-dialog = "^2.4.0"
