[project]
name = "service-qr"
version = "0.1.0"
description = "QR Generator"
authors = [
    {name = "IronRom",email = "r.yarkey@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "qrcode (>=8.2,<9.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
